--- a/3Html/3HTML.html
+++ b/3Html/3HTML.html
@@ -12,7 +12,7 @@
 
     <section class="galery">
         <figure>
-            <a href="#modal"></a>
+            <a href="#modal"><img src="" alt=""></a>
         </figure>
     </section>
         
