--- a/3Html/3HTML.html
+++ b/3Html/3HTML.html
@@ -14,6 +14,12 @@
         <figure>
             <a href="#modal"><img src="" alt=""></a>
         </figure>
+        <figure>
+            <a href="#modal"><img src="" alt=""></a>
+        </figure>
+        <figure>
+            <a href="#modal"><img src="" alt=""></a>
+        </figure>
     </section>
         
 
