--- a/3Html/3HTML.html
+++ b/3Html/3HTML.html
@@ -12,16 +12,38 @@
 
     <section class="galery">
         <figure>
-            <a href="#modal"><img src="" alt=""></a>
+            <a href="#modal"><img src="/Images2/img1.avif" alt="Горное одуванчиковое поле"></a>
+            <figcaption>Горное одуванчиковое поле</figcaption>
+        </figure>
+
+        <figure>
+            <a href="#modal"><img src="/Images2/img2.avif" alt="Изображение домики у речки"></a>
+            <figcaption>Домики у речки</figcaption>
         </figure>
         <figure>
-            <a href="#modal"><img src="" alt=""></a>
+            <a href="#modal"><img src="/Images2/img3.avif" alt="Красивые закаты у реки"></a>
+            <figcaption>Красивые закаты у реки</figcaption>
         </figure>
         <figure>
-            <a href="#modal"><img src="" alt=""></a>
+            <a href="#modal"><img src="/Images2/img4.avif" alt="Пейзаж заката"></a>
+            <figcaption>Красивый закат у домов</figcaption>
+        </figure>
+        <figure>
+            <a href="#modal"><img src="/Images2/img5.avif" alt="Красивые цветы на фоне солнца"></a>
+            <figcaption>Красивые цветы на фоне солнца</figcaption>
+        </figure>
+        <figure>
+            <a href="#modal"><img src="/Images2/img6.avif" alt="Рисунок гор у реки"></a>
+            <figcaption>Горы у реки</figcaption>
         </figure>
     </section>
         
+    <!-- <div class="modal" id="modal">
+        <div class="modal-content">
+            <a href="#" class="close" aria-label="Закрыть">&times;</a>
+            <img src="/Images2/img1.avif" alt="Полноразмерное изображение" id="modal-image">
+        </div>
+    </div> -->
 
 </body>
 </html>
