--- a/3Html/3HTML.html
+++ b/3Html/3HTML.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/3Html/3CSS.css">
     <title>3 Задание</title>
 </head>
 <body>
@@ -10,33 +11,74 @@
         <h1>Галерея изображений</h1>
     </div>
 
-    <section class="galery">
+    <section class="gallery"> 
         <figure>
-            <a href="#modal"><img src="/Images2/img1.avif" alt="Горное одуванчиковое поле"></a>
+            <a href="#modal-img1"><img src="/Images2/img1.avif" alt="Горное одуванчиковое поле"></a>
             <figcaption>Горное одуванчиковое поле</figcaption>
         </figure>
-
         <figure>
-            <a href="#modal"><img src="/Images2/img2.avif" alt="Изображение домики у речки"></a>
+            <a href="#modal-img2"><img src="/Images2/img2.avif" alt="Изображение домики у речки"></a>
             <figcaption>Домики у речки</figcaption>
         </figure>
         <figure>
-            <a href="#modal"><img src="/Images2/img3.avif" alt="Красивые закаты у реки"></a>
+            <a href="#modal-img3"><img src="/Images2/img3.avif" alt="Красивые закаты у реки"></a>
             <figcaption>Красивые закаты у реки</figcaption>
         </figure>
         <figure>
-            <a href="#modal"><img src="/Images2/img4.avif" alt="Пейзаж заката"></a>
+            <a href="#modal-img4"><img src="/Images2/img4.avif" alt="Пейзаж заката"></a>
             <figcaption>Красивый закат у домов</figcaption>
         </figure>
         <figure>
-            <a href="#modal"><img src="/Images2/img5.avif" alt="Красивые цветы на фоне солнца"></a>
+            <a href="#modal-img5"><img src="/Images2/img5.avif" alt="Красивые цветы на фоне солнца"></a>
             <figcaption>Красивые цветы на фоне солнца</figcaption>
         </figure>
         <figure>
-            <a href="#modal"><img src="/Images2/img6.avif" alt="Рисунок гор у реки"></a>
+            <a href="#modal-img6"><img src="/Images2/img6.avif" alt="Рисунок гор у реки"></a>
             <figcaption>Горы у реки</figcaption>
         </figure>
     </section>
-        
+
+    <div id="modal-img1" class="modal">
+        <div class="modal-content">
+            <a href="#" class="close-btn" aria-label="Закрыть">x</a>
+            <img src="/Images2/img1.avif" alt="Горное одуванчиковое поле">
+        </div>
+    </div>
+
+    <div id="modal-img2" class="modal">
+        <div class="modal-content">
+            <a href="#" class="close-btn" aria-label="Закрыть">x</a>
+            <img src="/Images2/img2.avif" alt="Домики у речки">
+        </div>
+    </div>
+
+    <div id="modal-img3" class="modal">
+        <div class="modal-content">
+            <a href="#" class="close-btn" aria-label="Закрыть">x</a>
+            <img src="/Images2/img3.avif" alt="Красивые закаты у реки">
+        </div>
+    </div>
+
+    <div id="modal-img4" class="modal">
+        <div class="modal-content">
+            <a href="#" class="close-btn" aria-label="Закрыть">x</a>
+            <img src="/Images2/img4.avif" alt="Пейзаж заката">
+        </div>
+    </div>
+
+    <div id="modal-img5" class="modal">
+        <div class="modal-content">
+            <a href="#" class="close-btn" aria-label="Закрыть">x</a>
+            <img src="/Images2/img5.avif" alt="Красивые цветы на фоне солнца">
+        </div>
+    </div>
+
+    <div id="modal-img6" class="modal">
+        <div class="modal-content">
+            <a href="#" class="close-btn" aria-label="Закрыть">x</a>
+            <img src="/Images2/img6.avif" alt="Горы у реки">
+        </div>
+    </div>
+
 </body>
 </html>
