--- a/1Html/1HTML.html
+++ b/1Html/1HTML.html
@@ -50,8 +50,7 @@
             <li><a href="#"><i class="fa fa-plane" aria-hidden="true"></i></a></li>
             <li><a href="#"><i class="fa fa-book" aria-hidden="true"></i></a></li>
             <li><a href="#"><i class="fa fa-align-left" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-male" aria-hidden="true"></i>
-</a></li>
+            <li><a href="#"><i class="fa fa-male" aria-hidden="true"></i></a></li>
         </ul>
     </aside>
 
