--- a/2Html/2HTML.html
+++ b/2Html/2HTML.html
@@ -3,47 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/2Html/2CSS.css">
     <title>2 Задание</title>
 </head>
 <body>
      <form action="/register" method="POST">
         <h1>Регистрация </h1>
-        <div>
-            <label for="name">Имя: </label>
+        <div class="name">
+            <label for="name">Имя</label><br>
             <input type="text" placeholder="Введите ваше имя">
         </div>
-        <div>
-            <label for="email">Электронная почта: </label>
+
+        <div class="email">
+            <label for="email">Электронная почта</label><br>
             <input type="email" placeholder="1234@gmail.com">
         </div>
-        <div>
-            <label for="password">Пароль: </label>
+
+        <div class="password">
+            <label for="password">Пароль</label><br>
             <input type="password" placeholder="Введите пароль">
         </div>
-        <div>
-            <label for="confirm_password">Подтверждение пароля: </label>
+
+        <div class="confirm_password">
+            <label for="confirm_password">Подтверждение пароля</label><br>
             <input type="password" placeholder="Повторите пароль">
         </div>
-        <div>
-            <label for="date">Дата рождения: </label>
+
+        <div class="date">
+            <label for="date">Дата рождения</label><br>
             <input type="date">
         </div>
-        <div>
-            <label>Пол:</label>
-            <div>
+
+        <div class="pol">
+            <label class="poltext">Пол:</label><br>
+            <div class="radio">
                 <input type="radio" id="male" name="gender" value="male" required>
                 <label for="male">Мужской</label>
             </div>
-            <div>
+            <div class="radio">
                 <input type="radio" id="female" name="gender" value="female" required>
                 <label for="female">Женский</label>
             </div>
         </div>
-        <div>
+        <div class="checkbox">
             <input type="checkbox">
             <label for="polisity"> Я согласен с условиями использования и политикой конфиденциальности</label>
         </div>
-        <div>
+
+        <div class="btn">
             <button>Зарегистрироваться</button>
         </div>
      </form>
