--- a/5Html/5HTML.html
+++ b/5Html/5HTML.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/5Html/5CSS.css">
     <title>5 Задача</title>
 </head>
 <body>
@@ -18,34 +19,34 @@
         <div class="calculator">
             <table>
                 <tr>
-                    <td><button>C</button></td>
-                    <td><button>±</button></td>
-                    <td><button>%</button></td>
-                    <td><button>÷</button></td>
+                    <td><button class="function">C</button></td>
+                    <td><button class="function">±</button></td>
+                    <td><button class="function">%</button></td>
+                    <td><button class="operator">÷</button></td>
                 </tr>
                 <tr>
                     <td><button>7</button></td>
                     <td><button>8</button></td>
                     <td><button>9</button></td>
-                    <td><button>x</button></td>
+                    <td><button class="operator">x</button></td>
                 </tr>
                 <tr>
                     <td><button>4</button></td>
                     <td><button>5</button></td>
                     <td><button>6</button></td>
-                    <td><button>-</button></td>
+                    <td><button class="operator">-</button></td>
                 </tr>
                 <tr>
                     <td><button>1</button></td>
                     <td><button>2</button></td>
                     <td><button>3</button></td>
-                    <td><button>+</button></td>
+                    <td><button class="operator">+</button></td>
                 </tr>
                 <tr>
-                    <td><button>0</button></td>
+                    <td><button class="zero">0</button></td>
                     <td><button>00</button></td>
                     <td><button>.</button></td>
-                    <td><button>=</button></td>
+                    <td><button class="equals">=</button></td>
                 </tr>
             </table>
         </div>
