--- a/3Html/3HTML.html
+++ b/3Html/3HTML.html
@@ -13,31 +13,31 @@
 
     <section class="gallery"> 
         <figure>
-            <a href="#modal-img1"><img src="/Images2/img1.avif" alt="Горное одуванчиковое поле"></a>
+            <a href="#modal-img1"><img src="/Images2/img1.avif" data-full="full/01.avif" alt="Горное одуванчиковое поле"></a>
             <figcaption>Горное одуванчиковое поле</figcaption>
         </figure>
         <figure>
-            <a href="#modal-img2"><img src="/Images2/img2.avif" alt="Изображение домики у речки"></a>
+            <a href="#modal-img2"><img src="/Images2/img2.avif" data-full="full/02.avif" alt="Изображение домики у речки"></a>
             <figcaption>Домики у речки</figcaption>
         </figure>
         <figure>
-            <a href="#modal-img3"><img src="/Images2/img3.avif" alt="Красивые закаты у реки"></a>
+            <a href="#modal-img3"><img src="/Images2/img3.avif" data-full="full/03.avif" alt="Красивые закаты у реки"></a>
             <figcaption>Красивые закаты у реки</figcaption>
         </figure>
         <figure>
-            <a href="#modal-img4"><img src="/Images2/img4.avif" alt="Пейзаж заката"></a>
+            <a href="#modal-img4"><img src="/Images2/img4.avif" data-full="full/04.avif" alt="Пейзаж заката"></a>
             <figcaption>Красивый закат у домов</figcaption>
         </figure>
         <figure>
-            <a href="#modal-img5"><img src="/Images2/img5.avif" alt="Красивые цветы на фоне солнца"></a>
+            <a href="#modal-img5"><img src="/Images2/img5.avif" data-full="full/05.avif" alt="Красивые цветы на фоне солнца"></a>
             <figcaption>Красивые цветы на фоне солнца</figcaption>
         </figure>
         <figure>
-            <a href="#modal-img6"><img src="/Images2/img6.avif" alt="Рисунок гор у реки"></a>
+            <a href="#modal-img6"><img src="/Images2/img6.avif" data-full="full/06.avif" alt="Рисунок гор у реки"></a>
             <figcaption>Горы у реки</figcaption>
         </figure>
     </section>
-
+ 
     <div id="modal-img1" class="modal">
         <div class="modal-content">
             <a href="#" class="close-btn" aria-label="Закрыть">x</a>
@@ -80,5 +80,6 @@
         </div>
     </div>
 
+    <script src="/3Html/3JS.js"></script>
 </body>
 </html>
