--- a/4Html/4HTML.html
+++ b/4Html/4HTML.html
@@ -30,7 +30,7 @@
                 <label for="active">Активные</label>
             </div>
             <div class="filter-tab">
-                <input type="radio" name="filter" id="completed">
+                <input type="radio" name="filter" id="completed"> 
                 <label for="completed">Завершенные</label>
             </div>
         </fieldset>
@@ -59,7 +59,7 @@
 
             <div class="alltasks">Всего задач: 3</div>
         </fieldset>
-
+        <script src="/4Html/4JS.js"></script>
     </main>
 </body>
 </html>
