--- a/5Html/5HTML.html
+++ b/5Html/5HTML.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/5Html/5CSS.css">
@@ -12,45 +12,42 @@
             <h1>Калькулятор</h1>
         </div>
 
-        <div class="display">
-            <p>999</p>
-        </div>
+        
 
         <div class="calculator">
-            <table>
-                <tr>
-                    <td><button class="function">C</button></td>
-                    <td><button class="function">±</button></td>
-                    <td><button class="function">%</button></td>
-                    <td><button class="operator">÷</button></td>
-                </tr>
-                <tr>
-                    <td><button>7</button></td>
-                    <td><button>8</button></td>
-                    <td><button>9</button></td>
-                    <td><button class="operator">x</button></td>
-                </tr>
-                <tr>
-                    <td><button>4</button></td>
-                    <td><button>5</button></td>
-                    <td><button>6</button></td>
-                    <td><button class="operator">-</button></td>
-                </tr>
-                <tr>
-                    <td><button>1</button></td>
-                    <td><button>2</button></td>
-                    <td><button>3</button></td>
-                    <td><button class="operator">+</button></td>
-                </tr>
-                <tr>
-                    <td><button class="zero">0</button></td>
-                    <td><button>00</button></td>
-                    <td><button>.</button></td>
-                    <td><button class="equals">=</button></td>
-                </tr>
-            </table>
+            <input type="text" id="display" readonly value="0">
+            <div class="buttons">
+
+                        <button class="clear">C</button>
+                        <button class="function">±</button>
+                        <button class="function">%</button>
+                        <button class="operator">/</button>
+
+                        <button>7</button>
+                        <button>8</button>
+                        <button>9</button>
+                        <button class="operator">*</button>
+
+                        <button>4</button>
+                        <button>5</button>
+                        <button>6</button>
+                        <button class="operator">-</button>
+
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                        <button class="operator">+</button>
+
+                        <button class="zero">0</button>
+                        <button>00</button>
+                        <button>.</button>
+                        <button id="equals">=</button>
+
+            </div>
+            
         </div>
 
     </main>
+    <script src="/5Html/5JS.js"></script>
 </body>
 </html>
